ingress-app-deployment/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app-example
spec:
  selector:
    matchLabels:
      app: apple-app-example
  template:
    metadata:
      labels:
        app: apple-app-example
    spec:
      containers:
      - name: apple-app-example
        image: prateekkumawat/ingress:app1
        ports:
        - containerPort: 80
